<resources>
    <string name="app_name">EPUBium</string>
    <string name="epubium_bookshelf">EPUBium - Bookshelf</string>
    <string name="bookshelf_nobook">You do not have any books in library\nPut your books in /sdcard/Books/\nand press the scan button</string>
    <string name="desktop_nobook">No books on desktop yet.\nAdd books to desktop in reading screen.</string>
    <string name="settings_open_external">Open book in external reader app</string>
    <string name="clear_cache">Clear cache</string>
    <string name="save">SAVE</string>
    <string name="load">LOAD</string>
    <string name="all">All</string>
    <string name="all_books">All Books</string>
    <string name="desktop">Desktop</string>
    <string name="folders">Folders</string>
    <string name="preference">Preference</string>
    <string name="settings">Settings</string>
    <string name="text_size">Text Size</string>
    <string name="quick_load">Quick load</string>
    <string name="quick_save">Quick save</string>
    <string name="reload">Reload</string>
    <string name="scan_rescure_dictionary">Rescue dictionary...</string>
    <string name="scan_found">%d books found in %d folders</string>
    <string name="scan_reading_database">Reading database...</string>
    <string name="scan_going_to_add">%d books is to be add.</string>
    <string name="scan_begin_adding">Begin adding...</string>
    <string name="scan_add_progress">Adding %d/%d books</string>
    <string name="scan_save_to_database">Saving into database...</string>
    <string name="scan_removed">Detecting removed books...</string>
    <string name="scan_report">%d books added while %d books removed</string>
    <string name="scan_error">An error occured</string>
    <string name="load_prepare">Preparing books</string>
    <string name="load_loading">Loading...</string>
    <string name="load_error">\"Error: \"</string>
    <string name="bookshelf_scan_for_books">Scan for books</string>
    <string name="bookshelf_begin_scan">Begin scanning now?</string>
    <string name="bookshelf_rescan_all">Rescan all</string>
    <string name="bookshelf_rescan_message">Do full scan only if the book is displayed incorrectly in library. Will take a long time. \n\nContinue?</string>
    <string name="open_no_external">No external reader is installed.</string>
    <string name="setting_clean_cache_message">Are you sure to clear book cache? \n It is not wise to clean cache so frequently</string>
    <string name="tab_chapters">Chapters</string>
    <string name="tab_saves">Saves</string>
    <string name="load_empty_save">No save</string>
    <string name="loaded">Loaded</string>
    <string name="saved">Saved</string>
    <string name="save_auto">\"Autosave \"</string>
    <string name="save_quick">\"Quicksave \"</string>
    <string name="save_normal">Save #%d %s</string>
    <string name="save_empty">Empty</string>
    <string name="about">About</string>
    <string name="about_file_name">about</string>
    <string name="bookshelf_search">Search Book</string>
    <string name="daylight">DayNight</string>
    <string name="tempbookmark">Temporary Bookmark</string>
    <string name="isnightmode" translatable="false">no</string>
    <string name="allownight">Turn page background into black when night</string>
    <string name="server">EPUBium Server</string>
    <string name="no_internet">Network not available</string>
    <string name="eink">Eink Mode</string>
    <string name="requirerestart">Eink Mode require restart to take effect</string>
    <string name="fontselect">Choose font</string>
    <string name="where_the_font_at" >Put custom ttf fonts in \'.font\' folder under \'Books\' folder</string>
    <string name="err_font_file">What did you do with .font folder</string>
    <string name="err_no_font">No font was found</string>
    <string name="default_font"><![CDATA[<System Default>]]></string>
    <string name="complete_books">Completed Books</string>
    <string name="mark_as_complete">Mark as Complete</string>
    <string name="title_completed_books">Completed books</string>
    <string name="dlg_complete_msg">Are you sure to mark this book as completed? \nThe book will no longer be displayed in the library, it can only be access by the Completed Books in the drawer menu.</string>
    <string name="mark_as_not_completed">Mark as not completed</string>
    <string name="success">Success.</string>
    <string name="export_finish_list">Sync finish reading list</string>
    <string name="filename_complete_reading">completed_books.txt</string>
    <string name="fin">FIN</string>
    <string name="fullscreen_hint">Double click center or slide from left to show menu</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="show_bottom_status_bar">Show bottom status bar</string>
    <string name="fullscreen_mode_is_only_suggested_to_use_on_eink_device">Fullscreen mode is only suggested to use on Eink device.</string>
    <string name="add_to_desktop">Add to Desktop</string>
    <string name="remove_from_desktop">Remove from desktop</string>
    <string name="menu_add_to_desktop">Which position will the book be put:</string>
    <string name="tm_added_to_desktop">The book has been put on the desktop.</string>
    <string name="tm_removed_from_desktop">The book has been removed from desktop.</string>
    <string name="settings_reading_theme">Reading Theme: (Android 9+, need restart)</string>
    <string name="settings_reading_theme_daynight">Follow system</string>
    <string name="settings_reading_theme_always_light">Light Theme (for E-Ink devices)</string>
    <string name="settings_reading_theme_always_dark">Dark Theme (Save power on OLED device)</string>
    <string name="abc_share_book_to">Share book to ...</string>
    <string name="mnu_abc_start_reading">Start reading</string>
    <string name="abc_share_to_xetink">Push to XTEink</string>
</resources>
