<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/settings_open_external"
        android:gravity="center_vertical"
        android:id="@+id/chkExternalOpen"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/allownight"
        android:gravity="center_vertical"
        android:id="@+id/chkAllowNight"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/eink"
        android:gravity="center_vertical"
        android:id="@+id/chkEink"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_cache"
        android:onClick="clearCache"/>

</LinearLayout>